# lumiere-fer

./: .gitignore  README.md  pyproject.toml
lumiere_fer/: __main__.py  relighter.py
lumiere_fer/constants/: generic.py  kaggle_api.py
lumiere_fer/dataset_utils/: __main__.py  download_kaggle_dataset.py
lumiere_fer/downloaders/: __main__.py  dataset_downloader.py  download_fer_2013.py  download_kaggle_dataset.py
lumiere_fer/evaluators/: evaluate_ck_plus.py  evaluate_fer_2013.py  evaluate_on_images.py  utils.py
lumiere_fer/models/: emotion_counter.py  kaggle_dataset_metadata.py
lumiere_fer/utils/: emotion.py  file.py  progress.py
tests/: test_lumiere_fer.py
